- Added new rss sidebox plus supporting classes; uses lastRSS (included in
  ZenMagick distribution)
- Added all review related views
- Added first iteration of ZenMagick CatalogManager
- JS based confirm dialog for admin delete operations
- Added new validation framework (allows for both client and server side
  validation)
- added error view to default theme
- fixed some more validation errors


Release 0.4.5
- upgraded to zen-cart 1.3.6
- add conveniece function zm_ezpage_link($id)
- fixed wrong index validation bug in feature admin
- fixed missing featured in feature admin when displaying error messages
- added missing bit of SQL to features.sql
- Added ZenMagick settings to zm_env() output
- make 'default_layout' the default default layout for all themes
- support for optional local.php file that may override default settings
- added support to use ZenMagick from within external PHP web applications
- feature admin was missing in release file :/
- banner support
- improved product image handling and support for additional images
- fixed a bug in the feature admin tree view related to apostrophes in the
  category name
- make HTML for (most) pages validate
- added support for meta tags and titles
- added echo parameter for zm_htmlurlencode/decode
- added new zm_htmlencode
- fixed registration error: missing country
- removed zm_nice_page_name in favour of zm_title and $zm_meta (ZMMetaTags)
- added zm_strip_html wrapper for zen_clean_html
- fixed login error messages if login not found
- added fix to be able to submit the login as post instead of get - this
  avoids having the password in the URL!
- extensions to l10n, plus phpdoc
- added ZMMetaTags for meta tag and title generation
- added newWin(this) JS function
- added zm_resolve_zc_class; this is mostly for internal use to load zen-cart
  classes on demand
- added getCategories() to ZMCategories
- added ZMSearch as wrapper around a search
- added advanced_search view to default theme